# libershare

./: .dockerignore  .gitattributes  .gitignore  .peer-pids  .prettierrc  CLAUDE.md  INSTALL.md  LISH.md  LISH_DATA_FORMAT.md  LISH_NETWORK_FORMAT.md  LISH_NETWORK_PROTOCOL.md  LISH_PROTOCOL.md  README.md  TODO.md  categories-item.html  commit.sh  docker-compose.yml  fix-rights.sh  git-stats.sh  install-kiosk.sh  package.json  prettier-all.sh  prettier-be.sh  prettier-cli.sh  prettier-fe.sh  prettier-shared.sh  restart-peers.sh  test-all.sh  test-be.sh  test-cli.sh  test-fe.sh  test-shared.sh
app/: Cargo.toml  Dockerfile  build-new.bat  build-new.sh  build.bat  build.rs  build.sh  core  desktop-entry-debug.desktop  desktop-entry.desktop  nsis-hooks.nsh  rustfmt.toml  sync-config.ts  tauri.conf.json  tauri.conf.json.template  tauri.linux.conf.json  tauri.linux.conf.json.template  tauri.macos.conf.json  tauri.windows.conf.json  wix-fragment-debug.wxs
app/bundle-scripts/: Debug.bat  debug.sh
app/capabilities/: default.json
app/nsis-langs/: Afrikaans.nsh  Albanian.nsh  Asturian.nsh  Basque.nsh  Belarusian.nsh  Bosnian.nsh  Breton.nsh  Bulgarian.nsh  Catalan.nsh  Corsican.nsh  Croatian.nsh  Czech.nsh  Danish.nsh  Esperanto.nsh  Estonian.nsh  Farsi.nsh  Finnish.nsh  Galician.nsh  Greek.nsh  Hebrew.nsh  Hungarian.nsh  Icelandic.nsh  Indonesian.nsh  Irish.nsh  Korean.nsh  Kurdish.nsh  Latvian.nsh  Lithuanian.nsh  Luxembourgish.nsh  Macedonian.nsh  Malay.nsh  Mongolian.nsh  NorwegianNynorsk.nsh  Pashto.nsh  Polish.nsh  Romanian.nsh  ScotsGaelic.nsh  Serbian.nsh  Slovak.nsh  (+8 more)
(+919 files in other folders)
