[package]
name = "app"
version = "0.0.1"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = "0.3"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-window-state = "2"

[profile.release]
lto = "thin"
strip = true
